--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,8 @@ description: > # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "" # the base hostname & protocol for your site
 
-twitter_username: batteryaciddev
-github_username: batteryacid
+twitter_username: BatteryAcidDev
+github_username: BatteryAcid
 
 # Build settings
 markdown: kramdown
